@@ -59,18 +59,20 @@ public class HeadlessNet implements Net {
 	}
 
 	@Override
-	public void openURI (String URI) {
+	public boolean openURI (String URI) {
+		boolean result = false;
 		try {
 			if (!GraphicsEnvironment.isHeadless() && Desktop.isDesktopSupported()) {
 				if (Desktop.getDesktop().isSupported(Action.BROWSE)) {
 					Desktop.getDesktop().browse(java.net.URI.create(URI));
-					return;
+					result = true;
 				}
+			} else {
+				Gdx.app.error("HeadlessNet", "Opening URIs on this environment is not supported. Ignoring.");		
 			}
 		} catch (Throwable t) {
 			Gdx.app.error("HeadlessNet", "Failed to open URI. ", t);
-			return;
 		}
-		Gdx.app.error("HeadlessNet", "Opening URIs on this environment is not supported. Ignoring.");
+		return result;
 	}
 }
