@@ -341,8 +341,11 @@ public interface Net {
 
 	/** Launches the default browser to display a URI. If the default browser is not able to handle the specified URI, the
 	 * application registered for handling URIs of the specified type is invoked. The application is determined from the protocol
-	 * and path of the URI.
+	 * and path of the URI. A best effort is made to open the given URI; however, since external applications are involved, no guarantee
+	 * can be made as to whether the URI was actually opened. If it is known that the URI was not opened, false will be returned; 
+	 * otherwise, true will be returned.
 	 * 
-	 * @param URI the URI to be opened. */
-	public void openURI (String URI);
+	 * @param URI the URI to be opened.
+	 * @return false if it is known the uri was not opened, true otherwise. */
+	public boolean openURI (String URI);
 }
